--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "serve": "serve -s out"
   },
   "dependencies": {
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "serve": "^14.2.1",
     "swiper": "^11.0.3"
   },
   "devDependencies": {
