--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 
 # next.js
 /.next/
-/out/
+# /out/
 
 # production
 /build
@@ -35,5 +35,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+/out/_next/
 *.txt
-_next
